SUBDIRS=	rfc-csv \
		comments

EXTRA_DIST=	\
		a.csv \
		a.pprint \
		abixy \
		abixy-het \
		abixy-wide \
		abixy-wide-short \
		abixy.csv \
		abixy.dkvp \
		abixy.json \
		abixy.md \
		abixy.nidx \
		abixy.pprint \
		abixy.tsv \
		abixy.xtab \
		absent.dkvp \
		arrays.json \
		b.csv \
		b.pprint \
		bom.csv \
		bom-dquote-header.csv \
		braced.csv \
		c.csv \
		c.pprint \
		capture-lengths.dkvp \
		capture.dkvp \
		clean-whitespace.csv \
		comma-at-eof.csv \
		comments \
		d.csv \
		d.pprint \
		date1.csv \
		date2.csv \
		dot-match.csv \
		dots.pprint-crlf \
		dots.xtab \
		double-ps.dkvp \
		e.csv \
		e.pprint \
		env-assign.sh \
		env-var.dkvp \
		escapes.json \
		example.usv \
		f.csv \
		f.pprint \
		fill-down.csv \
		filter-example.dsl \
		filter-script-piece-1 \
		filter-script-piece-2 \
		freq.dkvp \
		from-first.csv \
		fsec2xhms \
		g.csv \
		g.pprint \
		gmt2sec \
		gsub.dat \
		having-fields-regex.dkvp \
		het-join-left \
		het-join-right-r0 \
		het-join-right-r1 \
		het-join-right-r11 \
		het-join-right-r12 \
		het-join-right-r13 \
		het-join-right-r14 \
		het-join-right-r15 \
		het-join-right-r16 \
		het-join-right-r2 \
		het-join-right-r22 \
		het-join-right-r23 \
		het-join-right-r24 \
		het-join-right-r25 \
		het-join-right-r26 \
		het-join-right-r3 \
		het-join-right-r33 \
		het-join-right-r34 \
		het-join-right-r35 \
		het-join-right-r36 \
		het-join-right-r4 \
		het-join-right-r44 \
		het-join-right-r45 \
		het-join-right-r46 \
		het-join-right-r5 \
		het-join-right-r55 \
		het-join-right-r56 \
		het-join-right-r6 \
		het-join-right-r66 \
		het.csv \
		het.dkvp \
		int-float.dkvp \
		int64arith.dkvp \
		int64io.dkvp \
		ints.dkvp \
		join-het.dkvp \
		joina.dkvp \
		joinb.dkvp \
		json-output-options.dkvp \
		line-ending-cr.bin \
		line-ending-crlf.bin \
		line-ending-lf.bin \
		line-term-lf.dkvp \
		line-term-crlf.dkvp \
		line-term-lf.csv \
		line-term-crlf.csv \
		line-term-lf.json \
		line-term-crlf.json \
		line-term-lf-wrap.json \
		line-term-crlf-wrap.json \
		line-term-lf.pprint \
		line-term-crlf.pprint \
		line-term-lf.xtab \
		line-term-crlf.xtab \
		logi.dkvp \
		mand.mlr \
		merge-fields-abxy.dkvp \
		merge-fields-in-out.csv \
		merge-fields-in-out-mixed.csv \
		minmax.dkvp \
		missings.dkvp \
		mixed-types.xtab \
		modarith.dat \
		multi-format-join-a.csv \
		multi-format-join-a.dkvp \
		multi-format-join-a.json \
		multi-format-join-b.csv \
		multi-format-join-b.dkvp \
		multi-format-join-b.json \
		multi-ips.dkvp \
		multi-sep.csv-crlf \
		multi-sep.dkvp-crlf \
		near-ovf.dkvp \
		nest-explode-vary-fs-ps.dkvp \
		nest-explode.dkvp \
		null-fields.csv \
		null-fields.nidx \
		null-vs-empty.dkvp \
		nullvals.dkvp \
		ofmt.dat \
		page-aligned-final-ifs.dkvp \
		page-aligned-final-irs.dkvp \
		page-aligned-final-no-ifs.dkvp \
		page-aligned-no-final-eol.xtab \
		page-aligned-no-final-irs.csvl \
		page-aligned-no-final-irs.dkvp \
		page-aligned-no-final-irs.nidx \
		put-example.dsl \
		put-script-piece-1 \
		put-script-piece-2 \
		put-script-piece-3 \
		quote-original.csv \
		ragged.csv \
		regex.dkvp \
		regularize.dkvp \
		remove-empty-columns.csv \
		repeat-input.dat \
		repeats.dkvp \
		reshape-long-ragged.dkvp \
		reshape-long.tbl \
		reshape-wide-ragged.dkvp \
		reshape-wide.tbl \
		rfc-csv \
		scinot.dkvp \
		scinot1.dkvp \
		sec2gmt \
		sec2xhms \
		short \
		short-circuit.dkvp \
		sieve.mlr \
		simple.tsv \
		small \
		small-nested.json \
		small-non-nested-wrapped.json \
		small-non-nested.json \
		sort-het.dkvp \
		space-pad.dkvp \
		space-pad.nidx \
		space-pad.pprint \
		string-numeric-ordering.dkvp \
		sub.dat \
		subtab.dkvp \
		subtab1.mlr \
		subtab2.mlr \
		subtab3.mlr \
		subtab4.mlr \
		test-dsl-stack-allocation.mlr \
		trivial-records.csv \
		truncated.csv \
		truncated.dkvp \
		truncated.nidx \
		truncated.pprint \
		truncated.xtab-crlf \
		typeof.dkvp \
		unset1.dkvp \
		unset4.dkvp \
		utf8-1.csv \
		utf8-2.csv \
		utf8-align.dkvp \
		utf8-align.nidx \
		valgrind.txt \
		x0to10.dat \
		xy40.dkvp \
		xyz345 \
		xyz2
