EXTRA_DIST=	\
		a.csv \
		a.pprint \
		abixy \
		abixy-wide \
		b.csv \
		b.pprint \
		c.csv \
		c.pprint \
		d.csv \
		d.pprint \
		double-ps.dkvp \
		e.csv \
		e.pprint \
		f.csv \
		f.pprint \
		fsec2xhms \
		g.csv \
		g.pprint \
		gmt2sec \
		het.csv \
		het.dkvp \
		joina.dkvp \
		joinb.dkvp \
		minmax.dkvp \
		missings.dkvp \
		null-fields.csv \
		null-fields.nidx \
		regularize.dkvp \
		rfc-csv/narrow-truncated.csv \
		rfc-csv/narrow.csv \
		rfc-csv/quoted-comma-truncated.csv \
		rfc-csv/quoted-comma.csv \
		rfc-csv/quoted-crlf-truncated.csv \
		rfc-csv/quoted-crlf.csv \
		rfc-csv/simple-truncated.csv \
		rfc-csv/simple.csv \
		sec2gmt \
		sec2xhms \
		short \
		small \
		space-pad.dkvp \
		space-pad.nidx \
		space-pad.pprint \
		truncated.csv \
		truncated.dkvp \
		truncated.nidx \
		truncated.pprint \
		truncated.xtab \
		utf8-1.csv \
		utf8-2.csv \
		utf8-align.dkvp \
		utf8-align.nidx
