EXTRA_DIST=	\
	comments1.dkvp \
	comments2.dkvp \
	comments3.dkvp \
	comments1.nidx \
	comments2.nidx \
	comments3.nidx \
	comments1.json \
	comments2.json \
	comments3.json \
	comments1.xtab \
	comments2.xtab \
	comments1.csv \
	comments2.csv \
	\
	comments1-atat.dkvp \
	comments2-atat.dkvp \
	comments3-atat.dkvp \
	comments1-atat.nidx \
	comments2-atat.nidx \
	comments3-atat.nidx \
	comments1-atat.json \
	comments2-atat.json \
	comments3-atat.json \
	comments1-atat.xtab \
	comments2-atat.xtab \
	comments1-atat.csv \
	comments2-atat.csv
